k8s/spring/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-app
  namespace: app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: spring-app

  template:
    metadata:
      labels:
        app: spring-app

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: spring-app
          image: ghcr.io/eugenbonta/requesttracker:INITIAL
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"

            limits:
              cpu: "500m"
